[java223] MD5 with UTF8, renaming typo, misc compiler warning
Signed-off-by: Gwendal Roulleau <gwendal.roulleau@gmail.com>