@@ -1,6 +1,7 @@
 package ch.obermuhlner.scriptengine.java;
 
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.security.CodeSource;
 import java.security.Principal;
@@ -40,10 +41,10 @@ public class MemoryClassLoader extends ClassLoader {
         this.mapClassBytes = mapClassBytes;
 
         try {
-            URL url = new URL(MEMORY_CLASS_URL);
+            URL url = new java.net.URI(MEMORY_CLASS_URL).toURL();
             CodeSource codeSource = new CodeSource(url, (Certificate[]) null);
             protectionDomain = new ProtectionDomain(codeSource, null, this, new Principal[0]);
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
